tests/NormalTests/paczka1/fuzzy1/68875346.err
Error in line 5: br0C5v8Ch A201 14,7
Error in line 8: br0C5v8Ch A434 24,5
Error in line 9: br0C5v8Ch S378 62,2
Error in line 14: NA3ox8Ov A201 55,1
Error in line 15: HZbjFP S482 25,7
Error in line 34: HZbjFP S378 226,06
